Added item 1a-risk factors to signal

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 Step1-Data/4-link_dict.pickle
 Step2-Signal/4-link_dict.pickle
+Step1-Data/6-link_dict.pickle
+Step2-Signal/6-link_dict.pickle
+Step3-Portfolio_Construction/1-horizon_rets_1a.pickle
